--- a/src/Header.css
+++ b/src/Header.css
@@ -21,7 +21,7 @@ header.hidden{
     position: fixed;
     width: 100vw;
     height: 50px;
-    background: #e91e62ef;
+    background: #8218c0de;
     box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
 }
 .title span{
@@ -91,12 +91,16 @@ nav.globalMenuSp {
     background: #00000098;
     height: 100%;
     width: 300px;
-    min-width: 300px;
-    max-width: 800px;
+    max-width: 100vw;
     opacity: 0;
     transition: opacity .6s ease, visibility .6s ease;
-    overflow-y: scroll;
     overflow-x: hidden;
+}
+
+@media screen and (max-height: 700px) {
+	nav.globalMenuSp{
+        overflow-y: scroll;
+    }
 }
 
 nav.globalMenuSp ul{
@@ -112,14 +116,14 @@ nav.globalMenuSp ul li {
     transition: 0.6s all;
     font-size: 1.3em;
     font-family: 'Roboto', sans-serif;
-    border-top: 1px solid #1293bac4;
+    border-top: 2px solid #8b890dc4;
 }
 nav.globalMenuSp ul li:last-child{
     padding-bottom: 0;
-    border-bottom: 1px solid #1293bac4;
+    border-bottom: 2px solid #8b890dc4;
 }
 nav.globalMenuSp ul li:hover{
-    background: #1293bac4;
+    background: #8b890dc4;
 }
 nav.globalMenuSp ul li a {
     display: block;
