--- a/src/Header.css
+++ b/src/Header.css
@@ -21,7 +21,7 @@ header.hidden{
     position: fixed;
     width: 100vw;
     height: 50px;
-    background: #8218c0de;
+    background: #4518c0de;
     box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
 }
 .title span{
@@ -65,10 +65,12 @@ header.hidden{
     top:30px;
 }
 
+.humburger.active span{
+    background: #000;
+}
 .humburger.active span:nth-child(1){
     top:16px;
     left:6px;
-    background: #fff;
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     transform: rotate(-45deg);
@@ -76,7 +78,6 @@ header.hidden{
 .humburger.active span:nth-child(2),
 .humburger.active span:nth-child(3){
     top:16px;
-    background: #fff;
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -87,13 +88,11 @@ nav.globalMenuSp {
     z-index : 1002;
     top  : 0;
     left : 0;
-    color: #fff;
-    background: #00000098;
+    color: #000;
+    background: #ffffffe1;
     height: 100%;
-    width: 300px;
-    max-width: 100vw;
-    opacity: 0;
-    transition: opacity .6s ease, visibility .6s ease;
+    width: 0px;
+    transition: .2s ease-in-out;
     overflow-x: hidden;
 }
 
@@ -113,42 +112,45 @@ nav.globalMenuSp ul li {
     padding: 0;
     width: 100%;
     text-align: center;
-    transition: 0.6s all;
+    transition: 0.4s all;
     font-size: 1.3em;
     font-family: 'Roboto', sans-serif;
-    border-top: 2px solid #8b890dc4;
+    border-top: 2px solid #7a7a76c4;
 }
 nav.globalMenuSp ul li:last-child{
     padding-bottom: 0;
-    border-bottom: 2px solid #8b890dc4;
+    border-bottom: 2px solid #7a7a76c4;
 }
 nav.globalMenuSp ul li:hover{
-    background: #8b890dc4;
+    background: #cecdcbc4;
 }
 nav.globalMenuSp ul li a {
     display: block;
-    color: #fff;
+    color: #000;
     padding: 1em 0;
     text-decoration: none;
 }
 nav.globalMenuSp.active{
-    opacity: 100;
+    width: 300px;
+    max-width: 100vw;
     pointer-events: all;
 }
 .hideLayer{
     position: absolute;
     height: 100vh;
     width: 100vw;
-    background: #00000000;
+    background: #000000;
     top: 0;
     left: 0;
     z-index: -1;
     transition: opacity .6s ease;
     pointer-events: none;
     overflow: hidden;
+    opacity: 0;
 }
 .hideLayer.active{
-    background: #00000086;
+    opacity: 0.8;
+    background: #000000;
     z-index: 0;
     pointer-events: all;
 }
