--- a/src/Footer.css
+++ b/src/Footer.css
@@ -4,9 +4,16 @@ footer{
     margin-top: 100px;
     height: 100px;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
 }
 .footer-content{
     margin: 20px;
+}
+
+@media screen and (min-width: 1024px){
+    footer{
+        width: calc(100% - 300px);
+        left: 300px;
+    }  
 }
