--- a/src/Header.css
+++ b/src/Header.css
@@ -56,6 +56,7 @@ header.hidden{
     left: 6px;
     background: #fff;
     transition: 0.3s ease-in-out;
+    border-radius: 2px;
 }
 .humburger span:nth-child(1){
     top:12px;
@@ -85,6 +86,12 @@ header.hidden{
 .humburger.active span:nth-child(3){
     top:16px;
     transform: rotate(45deg);
+}
+
+@keyframes anime{
+    50%{
+        top: 20px;
+    }
 }
 
 nav.globalMenuSp {
