--- a/src/TimeTable.css
+++ b/src/TimeTable.css
@@ -3,10 +3,32 @@
     padding-bottom: 150px;
     z-index: 500;
     overflow: hidden;
+    padding-top: 70px;
 }
 @media screen and (min-width: 1024px){
     .timetable-content{
         width: calc(100vw - 300px);
         transform: translateX(300px);
+    }
+}
+.table-title{
+    border-left: 4px solid #000000;
+    font-size: 1.8em;
+    padding-left: 15px;
+    margin: 15px 15px;
+    font-family: 'Noto Serif JP', serif;
+}
+.nakami{
+    width: 90%;
+    height: auto;
+    margin: 20px auto;
+    overflow: hidden;
+    padding: 20px;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+@media screen and (min-width: 1024px) {
+    .nakami{
+        width: 70%;
     }
 }
