--- a/src/Story1.css
+++ b/src/Story1.css
@@ -10,3 +10,19 @@
         transform: translateX(300px);
     }
 }
+#wrapper{
+    position: relative;
+    width: 100%;
+}
+#wrapper::before{
+    padding-top: 56.25%;
+    content:"";
+    display: block;
+}
+#story-contents{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
